@@ -1,12 +1,18 @@
+2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b6
+
+ * New: lib/progressbar.php
+
 2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b5
 
  * Removed: layout/adminAlbumCommands.inc
 
  * Change: Use getAlbumCommands() in albums.php
 
- * New: lib/progressbar.php
-
  * Change: Little wording.
+
+ * Fix: Security enhancement in register.php
+
+ * Fix: Remove redundant CSS in base.css.default
 
 2008-08-23 Jens Tkotz <jens@peino.de> 1.5.9-svn-b4
 
